# Translator

./: .gitignore  A  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirement.txt
app/: logging_config.py  main.py  metrics.py  settings.py
app/api/: deps.py  v1_jobs.py  v1_models.py  v1_translate.py
app/core/: orchestrator.py  policies.py  routing.py
app/inference/: engine.py  model_manager.py
domain/: models.py  schemas.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.test.jsx  setupTests.js  styles.css
infra/: cache.py  db.py  rate_limit.py  redis_client.py
tests/: test_routing.py  test_schemas.py  test_settings.py
workers/: celery_app.py  tasks.py
